create update products

--- a/.env.template
+++ b/.env.template
@@ -6,3 +6,17 @@ DATABASE_URL=
 
 # openssl rand -base64 32
 AUTH_SECRET=
+NEXTAUTH_URL=
+
+# https://developer.paypal.com/dashboard/applications/
+NEXT_PUBLIC_PAYPAL_CLIENT_ID=
+PAYPAL_SECRET=
+
+# POST
+PAYPAL_OAUTH_URL=https://api-m.sandbox.paypal.com/v1/oauth2/token
+
+#GET
+PAYPAL_ORDERS_URL=https://api.sandbox.paypal.com/v2/checkout/orders
+
+# CLAUDINARY IMAGES: https://console.cloudinary.com/pm/c-c261d80bbc20b12b189be68e0d3e37/developer-dashboard
+CLOUDINARY_URL=
