--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "seed": "ts-node src/seed/seed-database.ts"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.1.0",
-    "@prisma/client": "^5.8.1",
+    "@paypal/react-paypal-js": "^8.1.3",
+    "@prisma/client": "5.8.1",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.0.1",
     "clsx": "^2.1.0",
     "next": "14.1.0",
-    "next-auth": "5.0.0-beta.5",
-    "prisma": "^5.8.1",
+    "next-auth": "^5.0.0-beta.5",
+    "prisma": "5.8.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.49.3",
